<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mborzenkov.readlaterlist.fragments.edititem.EditItemFragment">
    <item
        android:id="@+id/edititem_action_save"
        android:orderInCategory="1"
        android:title="@string/edititem_menu_save"
        android:icon="@drawable/ic_check_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/edititem_action_delete"
        android:orderInCategory="100"
        android:title="@string/edititem_menu_delete"
        app:showAsAction="never" />
</menu>
